<resources>
    --Login
    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="btnStart">Iniciar Sesión</string>
    <string name="btnCreate">Crear Cuenta</string>
    <string name="ask">¿Has olvidado tu contraseña?</string>

    --Register
    <string name="register">Inscribirse</string>
    <string name="emailRegister">Correo</string>
    <string name="passRegister">Contraseña</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="btnRegister">Ingresar</string>
    <string name="askRegister">Tener una cuenta?</string>
    <string name="text">Iniciar Sesión</string>

    --Menu
    <string name="name">Camilo Quintana</string>
    <string name="menu">Menú</string>
    <string name="customers">Clientes</string>
    <string name="suppliers">Proveedores</string>
    <string name="sales">Ventas</string>
    <string name="shopping">Compras</string>
    <string name="users">Usuarios</string>
    <string name="products">Productos</string>

    --Manager
    <string name="manageTtile">Entitie title</string>
    <string name="edit">Mostrar</string>
    <string name="add">Añadir</string>
    <string name="goBack">Regresar</string>
    <string name="app_name" />

    -- Regitrar Usuario
    <string name="userName">Nombre</string>
    <string name="userLastName">Apellido</string>
    <string name="userEmail">Correo</string>
    <string name="userPhone">Teléfono</string>
    <string name="userUser">Usuario en la app</string>>
    <string name="userPass">Contraseña</string>
    <string name="userRol">Rol</string>
    <string name="btnRegisterUser">Registrar</string>

    -- Registrar Producto
    <string name="productName">Nombre Producto</string>
    <string name="ProductDescription">Descripción Producto</string>
    <string name="ProductType">Tipo Producto</string>
    <string name="ProductSellPrice">Precio de venta</string>
    <string name="ProductBuyPrice">Precio de compra</string>
    <string name="ProductAvailable">Unidades disponibles</string>
    <string name="btnRegisterProduct">Registrar</string>

    -- Refistrar Venta
    <string name="saleDate">Fecha de venta</string>
    <string name="saleTotal">Total venta</string>
    <string name="salePaymentMethod">Método de pago</string>">
    <string name="saleIdUser">ID del usuario</string>
    <string name="saleIdCustomer">ID del cliente</string>
    <string name="btnRegisterSale">Registrar</string>

    -- Registrar Cliente
    <string name="customerDocumentType">Tipo de documento</string>
    <string name="customerDocumentNumber">Número de documento</string>
    <string name="customerName">Nombre Cliente</string>
    <string name="customerLastName">Apellido Cliente</string>
    <string name="customerEmail">Correo Cliente</string>
    <string name="btnRegisterCustomer">Registrar</string>

    -- Registrar Proveedor
    <string name="providerName">Nombre Proveedor</string>
    <string name="providerPhone">Teléfono Proveedor</string>
    <string name="providerEmail">Correo Proveedor</string>
    <string name="btnRegisterProvider">Registrar</string>

    -- Registrar Compra
    <string name="purchasMethodPayment">Método de pago</string>
    <string name="purchaseTotal">Total compra</string>
    <string name="purchaseUserId">ID del usuario</string>


</resources>